--- a/src/main/webapp/images.css
+++ b/src/main/webapp/images.css
@@ -4,7 +4,8 @@
 
 .legend{
 	content:url(images/legend.png);
-
+	width:400px;
+	height:400px;
 }
 
 .checkout{
